<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.eryansky</groupId>
        <artifactId>ec-parent</artifactId>
        <version>4.3.20260612.04</version>
    </parent>
    <artifactId>ec-app-common</artifactId>
    <version>${ec-app-common.version}</version>
    <packaging>jar</packaging>
    <name>ec-app-common</name>
    <description>web</description>

    <properties>
        <maven.deploy.skip>false</maven.deploy.skip>
        <poi.version>5.5.1</poi.version>
        <xwpf.version>2.2.0</xwpf.version>
        <bsh.version>2.0b6</bsh.version>

        <sitemesh.version>3.2.3</sitemesh.version>
        <commons-csv.version>1.14.1</commons-csv.version>
        <commons-cli.version>1.11.0</commons-cli.version>
        <commons-compress.version>1.28.0</commons-compress.version>
        <jwt.version>4.5.2</jwt.version>
        <guava.version>33.6.0-jre</guava.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <!-- JSP 渲染引擎 -->
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <version>${tomcat.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.sitemesh</groupId>
            <artifactId>spring-boot-starter-sitemesh</artifactId>
            <version>${sitemesh.version}</version>
        </dependency>

        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-common</artifactId>
            <version>${ec-common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-client-common</artifactId>
            <version>${ec-client-common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-j2cache-spring-boot-starter</artifactId>
            <version>${ec-j2cache-spring-boot-starter.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-encrypt-spring-boot-starter</artifactId>
            <version>${ec-encrypt-spring-boot-starter.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.10.17</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>${poi.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${poi.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.poi</groupId>
                    <artifactId>poi-ooxml-lite</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>${commons-compress.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-full</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.poi.xwpf.converter.xhtml</artifactId>
            <version>${xwpf.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
            <version>${xwpf.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.opensagres.xdocreport</groupId>
            <artifactId>fr.opensagres.poi.xwpf.converter.core</artifactId>
            <version>${xwpf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache-extras.beanshell</groupId>
            <artifactId>bsh</artifactId>
            <version>${bsh.version}</version>
        </dependency>
        <dependency>
            <groupId>org.javadelight</groupId>
            <artifactId>delight-rhino-sandbox</artifactId>
            <version>0.2.2</version>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commons-cli.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>com.belerweb</groupId>
            <artifactId>pinyin4j</artifactId>
            <version>2.5.1</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>${jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commons-csv.version}</version>
        </dependency>
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>2.20.0</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <excludes>
                    <exclude>userfiles/**</exclude>
                    <exclude>disk/**</exclude>
                    <exclude>static/static/js/bootstrap/2.3.2/docs/**</exclude>
                    <exclude>static/static/js/bootstrap/3.2.0/**</exclude>
                    <exclude>static/static/js/bootstrap/img/**</exclude>
                    <exclude>static/static/js/easyui/src/**</exclude>
                    <exclude>static/static/js/easyui/**/*.html</exclude>
                    <exclude>static/static/js/easyui/**/*.json</exclude>
                    <exclude>static/static/js/easyui/**/*.txt</exclude>
                    <exclude>static/static/js/jquery-ztree/3.5.12/api/**</exclude>
                    <exclude>static/static/js/jquery-ztree/3.5.12/demo/**</exclude>
                    <exclude>static/static/js/My97DatePicker/docs/**</exclude>
                    <exclude>static/static/js/jquery-validation/dist/localization/**</exclude>
                    <exclude>static/static/js/jquery-validation/*.json</exclude>
                    <exclude>static/static/js/jquery-validation/*.md</exclude>
                    <exclude>static/static/js/fancyBox/lib/**</exclude>
                    <exclude>static/static/js/fancyBox/demo/**</exclude>
                    <exclude>static/static/js/jquery-jbox/2.3/docs/**</exclude>
                    <exclude>static/static/js/jquery-jbox/2.3/Skins2/**</exclude>
                    <exclude>static/static/js/treeTable/demo/**</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <targetPath>META-INF/resources</targetPath>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                    <excludes>
                        <!--注意从编译结果目录开始算目录结构-->
                        <exclude>userfiles/**</exclude>
                        <exclude>disk/**</exclude>
                        <exclude>static/static/js/bootstrap/2.3.2/docs/**</exclude>
                        <exclude>static/static/js/bootstrap/3.2.0/**</exclude>
                        <exclude>static/static/js/bootstrap/img/**</exclude>
                        <exclude>static/static/js/easyui/src/**</exclude>
                        <exclude>static/static/js/easyui/**/*.html</exclude>
                        <exclude>static/static/js/easyui/**/*.json</exclude>
                        <exclude>static/static/js/easyui/**/*.txt</exclude>
                        <exclude>static/static/js/jquery-ztree/3.5.12/api/**</exclude>
                        <exclude>static/static/js/jquery-ztree/3.5.12/demo/**</exclude>
                        <exclude>static/static/js/My97DatePicker/docs/**</exclude>
                        <exclude>static/static/js/jquery-validation/dist/localization/**</exclude>
                        <exclude>static/static/js/jquery-validation/*.json</exclude>
                        <exclude>static/static/js/jquery-validation/*.md</exclude>
                        <exclude>static/static/js/fancyBox/lib/**</exclude>
                        <exclude>static/static/js/fancyBox/demo/**</exclude>
                        <exclude>static/static/js/jquery-jbox/2.3/docs/**</exclude>
                        <exclude>static/static/js/jquery-jbox/2.3/Skins2/**</exclude>
                        <exclude>static/static/js/treeTable/demo/**</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
